# mHC_Ascend

./: .gitignore  CMakeLists.txt  LICENSE  README.md  benchmark.py  pyproject.toml  setup.py
docs/: api_reference.md  api_reference_zh.md  architecture.md  architecture_zh.md  limitations_and_future_work.md  limitations_and_future_work_zh.md  ops_implementation_details.md  ops_implementation_details_zh.md  troubleshooting.md  troubleshooting_zh.md  vectorization_and_multicore.md  vectorization_and_multicore_zh.md
scripts/: build.sh  install.sh
src/csrc/include/: mhc_types.h  utils.h
src/csrc/kernels/: compute_rms.cpp  fused_ops.cpp  mhc_layer.cpp  rmsnorm.cpp  sinkhorn_knopp.cpp  stream_ops.cpp  test_vectorize.cpp
src/python/: bindings.cpp
src/python/mhc/: __init__.py  layer.py  layer_pytorch_bwd.py  ops.py  ops_pure_pytorch_backward.py  ops_pytorch_backward.py
