[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mhc-ascend"
version = "0.1.0"
description = "mHC (Manifold-Constrained Hyper-Connections) for Huawei Ascend NPUs"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.8"
authors = [
    {name = "mHC Development Team"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "torch>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "flake8>=6.0",
]

[project.urls]
"Homepage" = "https://github.com/anthropics/mHC-ascend"
"Documentation" = "https://github.com/anthropics/mHC-ascend#readme"

[tool.setuptools.packages.find]
where = ["src/python"]

[tool.setuptools.package-data]
"*" = ["*.so", "*.pyd"]
